fixed the upload bar to be infront of the map and the minor spacing between the map and the bar. Also touch up the main button css for padding on top and bottom

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -45,3 +45,9 @@
   width: 100%;
   text-align:center;
 }
+
+.sticky-submit-button {
+  z-index: 3;
+  height: 50px;
+}
+
